# jobshunt

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
src/jobshunt/: __init__.py  app.py  cli.py  config.py  models.py  paths.py
src/jobshunt/agents/jobshunt/: __init__.py  batch_jobs.py  evaluation.py  insight_apply.py  insights.py  job_spec.py  jobshunt_chat.py  negotiate.py  pipeline.py  preferences_from_summary.py  render.py  resume_refine.py  resume_vault.py  routes.py  scout.py  store.py  story_bank.py  tailor.py  text_sanitize.py  validate.py  vault_summary.py  workspaces.py
src/jobshunt/ai/: __init__.py  client.py  constants.py  custom_path_api.py  openai_url.py  request_headers.py  resolve.py  routes.py
src/jobshunt/static/ui/: index.html
src/jobshunt/static/ui/assets/: index-UTH-5Exp.css  index-pzKuzgDl.js
tests/: test_agent_llm_resolve.py  test_evaluation_parse.py  test_insight_apply_validate.py  test_insights_parse.py  test_pipeline_store.py  test_text_sanitize.py  test_vault_summary.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  DisplayPreferencesProvider.tsx  Layout.tsx  api.ts  displayPreferences.ts  index.css  main.tsx
ui/src/pages/: JobHunt.tsx  SettingsAI.tsx
